feat: add /recipe POST endpoint
